--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/(.*)", "dest": "/frontend/$1" }
+    { "handle": "filesystem" },
+    { "src": "^/(.*)$", "dest": "/frontend/dist/index.html" }
   ]
 }
