--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "builds": [
     { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } },
-    { "src": "api/index.js", "use": "@vercel/node" }
+    { "src": "backend/api/index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/index.js" },
+    { "src": "/api/(.*)", "dest": "/backend/api/index.js" },
     { "handle": "filesystem" },
     { "src": "^/(.*)$", "dest": "/frontend/dist/index.html" }
   ]
