--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,6 @@
     "multer": "^2.0.2",
     "pg": "^8.18.0",
     "xlsx": "^0.18.5",
-    "serverless-http": "^2.8.0"
+    "serverless-http": "latest"
   }
 }
