--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,6 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "pg": "^8.18.0",
-    "xlsx": "^0.18.5",
-    "serverless-http": "latest"
+    "xlsx": "^0.18.5"
   }
 }
